<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. YeHwi Kim (KeE)
  ~ This source code was created only for PerfectSoundsProject.
  ~ Author: YeHwi Kim(KeE)
  ~ Created Date: 5/8/2023
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.PlayActivity">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/backView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goBackBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/line_awesome"
        android:gravity="center"
        android:text="@string/la_undo"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="Title"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/goBackBtn"
        app:layout_constraintLeft_toRightOf="@id/goBackBtn"
        app:layout_constraintTop_toTopOf="@id/goBackBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/line_awesome"
        android:gravity="center"
        android:text="@string/la_not_fav"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.eagle.locker.widget.RippleBackground
            android:id="@+id/timerRippleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:rb_color="@color/common_white"
            app:rb_duration="5000"
            app:rb_radius="80dp"
            app:rb_rippleAmount="4"
            app:rb_scale="1.2"
            app:rb_strokeWidth="3dp"
            app:rb_type="strokeRipple" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timeView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/circle_back"
            android:gravity="center"
            android:text="00:00:00"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="Timer"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/musicLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#595E6F9E"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/musicPlayerIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/circle_back"
            android:fontFamily="@font/flat_icon"
            android:gravity="center"
            android:text="@string/fi_music"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/repeatModeBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/line_awesome"
            android:src="@drawable/widget_btn_repeat_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextMusicBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle_back_stroke"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_forward"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/repeatModeBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/playAndPauseMusicBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle_back_stroke"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_play"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/nextMusicBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prevMusicBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/circle_back_stroke"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_backward"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/playAndPauseMusicBtn"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/musicTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="true"
            android:text="Music Title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/musicPlayerIcon"
            app:layout_constraintRight_toLeftOf="@id/prevMusicBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/musicLevelLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/musicLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/line_awesome"
            android:text="@string/la_music"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/mediaVolumeSeekBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:max="15"
            android:progress="15"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/white"
            android:thumbTint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mediaVolumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/soundLevelLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/musicLevelLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:fontFamily="@font/line_awesome"
            android:text="@string/la_volume_up"
            android:textColor="@color/white"
            android:textSize="28dp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/systemVolumeSeekBar"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/white"
            android:thumbTint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/systemVolumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/soundLevelLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pauseAndPlayBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_back_2"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_pause"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prevSoundBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_angle_double_left"
            android:textColor="@color/white"
            android:textSize="33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pauseAndPlayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nextSoundBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_angle_double_right"
            android:textColor="@color/white"
            android:textSize="33dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/pauseAndPlayBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/half_transparent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/mLayout1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
