<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. YeHwi Kim (KeE)
  ~ This source code was created only for PerfectSoundsProject.
  ~ Author: YeHwi Kim(KeE)
  ~ Created Date: 11/8/2023
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_back"
    tools:context=".ui.MusicActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/common_half_alpha"
        android:elevation="10dp"
        android:paddingTop="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goBackBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_undo"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/goBackBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_half_alpha"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/currentDurationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="20:20"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="1000"
                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalDurationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="20:20"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/playAndPauseMusicBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/circle_back_stroke"
                android:fontFamily="@font/line_awesome"
                android:gravity="center"
                android:text="@string/la_play"
                android:textColor="@color/white"
                android:textSize="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/prevMusicBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/circle_back_stroke"
                android:fontFamily="@font/line_awesome"
                android:gravity="center"
                android:text="@string/la_backward"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/playAndPauseMusicBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nextMusicBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/circle_back_stroke"
                android:fontFamily="@font/line_awesome"
                android:gravity="center"
                android:text="@string/la_forward"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/playAndPauseMusicBtn"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/repeatModeBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/widget_btn_random"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/moreBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/line_awesome"
                android:gravity="center"
                android:text="@string/la_ellipsis_h"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintTop_toBottomOf="@id/topLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/volumeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/soundLevelLayout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/musicLevelLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/line_awesome"
                android:text="@string/la_volume_up"
                android:textColor="@color/white"
                android:textSize="28dp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/volumeSeekBar"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:max="15"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/volumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/volumeCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Close"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>