<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. YeHwi Kim (KeE)
  ~ This source code was created only for PerfectSoundsProject.
  ~ Author: YeHwi Kim(KeE)
  ~ Created Date: 7/8/2023
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_back"
    android:orientation="vertical"
    tools:context=".ui.EffectActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="Current Selection"
        android:textColor="@color/dark_white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedEffectsRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="All Sounds"
        android:textColor="@color/dark_white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allEffectsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:fontFamily="@font/flat_icon"
                android:gravity="center"
                android:text="@string/fi_close"
                android:textColor="@color/white"
                android:textSize="23dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/applyBtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/circle_back_2"
            android:fontFamily="@font/line_awesome"
            android:gravity="center"
            android:text="@string/la_check"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/resetBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:fontFamily="@font/flat_icon"
                android:gravity="center_horizontal"
                android:text="@string/fi_custom"
                android:textColor="@color/white"
                android:textSize="23dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>